--- a/Sex/Sex/Pages/Home/Home.storyboard
+++ b/Sex/Sex/Pages/Home/Home.storyboard
@@ -1,11 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="V2Y-Jd-Wnh">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="V2Y-Jd-Wnh">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +19,6 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fCz-ho-Oqd" customClass="HomeListsTableView">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
@@ -35,7 +31,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="首页" id="MtC-Ks-Lt6">
-                        <barButtonItem key="leftBarButtonItem" title="Item" id="YlT-eV-KWx">
+                        <barButtonItem key="leftBarButtonItem" image="btn_letter_default" id="YlT-eV-KWx">
                             <connections>
                                 <segue destination="vm4-82-0oE" kind="push" id="Uy1-wF-eNx"/>
                             </connections>
@@ -87,4 +83,7 @@
             <point key="canvasLocation" x="741.60000000000002" y="158.77061469265368"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="btn_letter_default" width="25" height="25"/>
+    </resources>
 </document>
