--- a/Sex/Sex/Business/CollectionView/HomeListsTableViewHeaderView.xib
+++ b/Sex/Sex/Business/CollectionView/HomeListsTableViewHeaderView.xib
@@ -1,32 +1,39 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11201"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="HomeListsTableViewHeaderView">
-            <rect key="frame" x="0.0" y="0.0" width="291" height="271"/>
+            <rect key="frame" x="0.0" y="0.0" width="475" height="303"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="littledog.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="rGH-Bu-9j7"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hq8-Rc-wts">
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PAH-Bp-7j2">
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="rGH-Bu-9j7" secondAttribute="trailing" id="Y5o-OJ-4Kd"/>
-                <constraint firstAttribute="bottom" secondItem="rGH-Bu-9j7" secondAttribute="bottom" id="eyV-eq-hAA"/>
-                <constraint firstItem="rGH-Bu-9j7" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="sfU-YT-Jzf"/>
-                <constraint firstItem="rGH-Bu-9j7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="wWQ-84-LZD"/>
+                <constraint firstItem="PAH-Bp-7j2" firstAttribute="top" secondItem="Hq8-Rc-wts" secondAttribute="bottom" id="4bi-S6-SNd"/>
+                <constraint firstItem="PAH-Bp-7j2" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="5bU-I8-Yj2"/>
+                <constraint firstAttribute="trailing" secondItem="Hq8-Rc-wts" secondAttribute="trailing" id="6pW-12-2Xh"/>
+                <constraint firstAttribute="trailing" secondItem="PAH-Bp-7j2" secondAttribute="trailing" id="EsI-6S-MTe"/>
+                <constraint firstItem="Hq8-Rc-wts" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Jrn-tN-Axd"/>
+                <constraint firstItem="Hq8-Rc-wts" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.7" id="MSh-0T-297"/>
+                <constraint firstAttribute="bottom" secondItem="PAH-Bp-7j2" secondAttribute="bottom" id="fI2-en-vhj"/>
+                <constraint firstItem="Hq8-Rc-wts" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="mSn-xR-3L9"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-39.5" y="141.5"/>
+            <point key="canvasLocation" x="52.5" y="125.5"/>
         </view>
     </objects>
-    <resources>
-        <image name="littledog.jpg" width="209" height="200"/>
-    </resources>
 </document>
